--- a/.github/workflows/buildsystems_linux.yml
+++ b/.github/workflows/buildsystems_linux.yml
@@ -196,6 +196,20 @@ jobs:
           meson compile -C build/meson
           meson test -C build/meson --print-errorlogs
 
+      - name: Coord smoke (CMake)
+        run: |
+          set -euxo pipefail
+          cmake -S . -B build/coord-cmake-smoke -G Ninja \
+            -DCMAKE_C_COMPILER=${{ matrix.cc }} \
+            -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} \
+            -DLLVM_DIR=${{ matrix.llvm_dir }} \
+            -DClang_DIR=${{ matrix.clang_dir }} \
+            -DGENTEST_BUILD_CODEGEN=OFF \
+            -DGENTEST_CODEGEN_EXECUTABLE=${GITHUB_WORKSPACE}/build/host-codegen/tools/gentest_codegen \
+            -DCOORD_CBOR_TAGS_SOURCE_DIR=
+          cmake --build build/coord-cmake-smoke --target gentest_coord_tests --parallel
+          ctest --test-dir build/coord-cmake-smoke -R "^(coord_counts|coord_list_counts)$" --output-on-failure
+
   xmake:
     name: Xmake • ${{ matrix.name }}
     runs-on: ubuntu-24.04
