Harden fixture reentry and tighten CMake regressions

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -556,6 +556,7 @@ target_include_directories(gentest_regression_shared_fixture_reentry PRIVATE
 gentest_add_check_death(
     NAME regression_bench_assert_failure_propagates
     PROG $<TARGET_FILE:gentest_regression_bench_assert>
+    EXPECT_SUBSTRING "intentional benchmark assertion failure"
     ARGS --run=regressions/bench_assert_should_fail --kind=bench)
 
 gentest_add_cmake_script_test(
@@ -563,7 +564,7 @@ gentest_add_cmake_script_test(
     PROG $<TARGET_FILE:gentest_regression_shared_fixture_reentry>
     SCRIPT "${PROJECT_SOURCE_DIR}/cmake/CheckNoTimeout.cmake"
     ARGS --run=regressions/shared_fixture_reentry_smoke --kind=test
-    DEFINES TIMEOUT_SEC=3)
+    DEFINES TIMEOUT_SEC=10 EXPECT_RC=0)
 
 # CLI checks for VSCode integration
 gentest_add_check_contains(NAME unit_help PROG $<TARGET_FILE:gentest_unit_tests> EXPECT_SUBSTRING gentest ARGS --help)
@@ -857,12 +858,15 @@ _gentest_add_cmake_helper_test(
     ${PROJECT_SOURCE_DIR}/cmake/CheckTuWrapperSourceProps.cmake
     cmake)
 
-_gentest_add_cmake_helper_test(
-    gentest_tu_header_case_collision
-    ${PROJECT_SOURCE_DIR}/tests/cmake/tu_header_case_collision
-    ${PROJECT_SOURCE_DIR}/cmake/CheckTuHeaderCaseCollision.cmake
-    cmake
-    -DCODEGEN_EXECUTABLE=${_gentest_codegen_prog})
+gentest_add_cmake_script_test(
+    NAME gentest_tu_header_case_collision
+    NO_EMULATOR
+    PROG ${_gentest_codegen_prog}
+    SCRIPT "${PROJECT_SOURCE_DIR}/cmake/CheckTuHeaderCaseCollision.cmake"
+    DEFINES
+        BUILD_ROOT=${CMAKE_CURRENT_BINARY_DIR}
+        TARGET_ARG=${_gentest_codegen_cross_target_arg})
+set_property(TEST gentest_tu_header_case_collision APPEND PROPERTY LABELS "codegen")
 
 option(GENTEST_ENABLE_PACKAGE_TESTS "Enable install + find_package consumer smoke test (FetchContent)" OFF)
 if(GENTEST_ENABLE_PACKAGE_TESTS)
